modificación de pages y agregado de animaciones

--- a/disenios_disponibles.html
+++ b/disenios_disponibles.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
 
   <body>
@@ -43,7 +47,7 @@
           </li>
         </ul>
       </nav>
-      <main class="text-center" id="productos">
+      <main class="text-center animate__animated animate__fadeIn" id="productos">
         <section class="galeria_disenios">
           <div>
             <h2>
