--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+    <link rel="stylesheet" href="css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+</head>
 
 <body>
     <div class="contenedor">
@@ -27,15 +32,15 @@
         </nav>
         <main id="productos">
             <section class="section_contacto">
-                <article class="preguntasFrecuentes__article">
+                <article class="preguntasFrecuentes__article animate__animated animate__fadeInLeft">
                     <p>
                         <h3>Preguntas Frecuentes</h3>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas in quas soluta, officia et doloribus? Qui minima impedit numquam beatae error quo eaque natus accusamus, provident nobis expedita architecto officiis.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa iure, delectus aliquid! Ut hic dolores, quae! Blanditiis ipsum incidunt aliquid perspiciatis pariatur odio. Asperiores veritatis adipisci provident magni earum!
                     </p>
                 </article>
-                <h2>Contacto</h2>
-                <section>
+                <h2 class="animate__animated animate__fadeInRight">Contacto</h2>
+                <section class="contacto animate__animated animate__fadeInRight">
                     <div class="contacto__texto">
                         <h3><label for="mensaje">Tenés dudas sobre mis productos? Dejame tu mensaje y te estaré respondiendo a la brevedad:
                             </label></h3>
