--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/animate.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -44,13 +49,8 @@
         </ul>
       </nav>
       <main class="text-center" id="productos">
-        <div>
-          <h1>Bienvenid@s a MLS Creaciones!</h1>
-          <img
-            src="img/productos.png"
-            alt="Una parte de mis creaciones"
-            class="w-40"
-          />
+        <h1>Bienvenid@s a MLS Creaciones!</h1>
+        <div id="portadaPage">
         </div>
       </main>
       <footer class="footer" id="footer">
