--- a/productos.html
+++ b/productos.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+    <link rel="stylesheet" href="css/style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+</head>
 
 <body>
     <div class="contenedor">
@@ -25,7 +30,7 @@
                 <li><a href="#"><img src="img/cart.png" alt="logo de carrito de compras" class=imgNav></a></li>
             </ul>
     </nav>
-        <nav id="filtros" class="nav2">
+        <nav id="filtros" class="nav2 animate__animated animate__fadeInLeft">
             <form>
                 <select name="productos" id="productos">
                     <option value="cartucheras">Cartucheras</option>
@@ -41,7 +46,7 @@
                 <li>Harry Potter (1 )</li>
             </ul>
         </nav>
-        <main id="productos" class="section_productos">
+        <main id="productos" class="section_productos animate__animated animate__fadeIn">
             <h2>Cartucheras<a href="disenios_disponibles.html">(Estampado a Elección)</a>
             </h2>            
             <section class="galeria">
@@ -99,7 +104,7 @@
                 </figure>
             </section>
         </main>
-        <aside id="aside" class="nav2">
+        <aside id="aside" class="nav2 animate__animated animate__fadeInRight">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, libero quas eos omnis sequi ab corrupti ea magnam hic quo nam vel quos quisquam molestiae. Quod consectetur ipsam voluptatibus commodi.
         </aside>
         <footer class="footer" id="footer">
