--- a/disenios_disponibles.html
+++ b/disenios_disponibles.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -16,47 +18,88 @@
       <header class="encabezado__box" id="header">
         Envío GRATIS con compras mayores a $3.000!
       </header>
-      <nav class="botonera" id="nav1">
-        <a href="index.html">
-          <img
-            src="img/logo.png"
-            alt="logo de MLS creaciones"
-            class="encabezado__logoMarca"
-          />
-        </a>
-        <ul>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="disenios_disponibles.html">Diseños Disponibles</a></li>
-          <li><a href="sobre_mi.html">Sobre Mí</a></li>
-          <li><a href="faqs_contacto.html">FAQs & Contacto</a></li>
-          <li>
-            <a href="#"
-              ><img
-                src="img/user.png"
-                alt="logo de inicio de sesión de usuario"
-                class="imgNav"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="img/cart.png"
-                alt="logo de carrito de compras"
-                class="imgNav"
-            /></a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="logo de MLS creaciones" class="w-70" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="productos.html"
+                  >Productos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="disenios_disponibles.html"
+                  >Diseños Disponibles</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="sobre_mi.html"
+                  >Sobre Mí</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="faqs_contacto.html"
+                  >FAQs & Contacto</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/user.png"
+                    alt="logo de inicio de sesión de usuario"
+                    class="imgNav"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/cart.png"
+                    alt="logo de carrito de compras"
+                    class="imgNav"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-      <main class="text-center animate__animated animate__fadeIn" id="productos">
+      <main
+        class="text-center animate__animated animate__fadeIn"
+        id="productos"
+      >
         <section class="galeria_disenios">
           <div>
-            <h2>
+            <h3>
               Te ofrezco una gran variedad de diseños exclusivos que voy
               actualizando constantemente! Para más información, suscribite a mi
               <a href="faqs_contacto.html">Newsletter</a>
-            </h2>
+            </h3>
           </div>
-
           <figure>
             <figcaption class="estampados__titulo">Gatitos</figcaption>
             <img
@@ -105,7 +148,7 @@
           />
         </div>
         <div>
-          <h3>Redes Sociales</h3>
+          <h3>Seguime en Redes</h3>
           <a
             href="https://es-la.facebook.com/pages/category/Interest/MLS-creaciones-1663628870628480/"
             target="_blank"
@@ -130,5 +173,7 @@
       </footer>
     </div>
     <!-- fin del contenedor-->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
