--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link
@@ -17,40 +18,104 @@
       <header class="encabezado__box" id="header">
         Envío GRATIS con compras mayores a $3.000!
       </header>
-      <nav class="botonera" id="nav1">
-        <a href="index.html">
-          <img
-            src="img/logo.png"
-            alt="logo de MLS creaciones"
-            class="encabezado__logoMarca"
-          />
-        </a>
-        <ul>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="disenios_disponibles.html">Diseños Disponibles</a></li>
-          <li><a href="sobre_mi.html">Sobre Mí</a></li>
-          <li><a href="faqs_contacto.html">FAQs & Contacto</a></li>
-          <li>
-            <a href="#"
-              ><img
-                src="img/user.png"
-                alt="logo de inicio de sesión de usuario"
-                class="imgNav"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="img/cart.png"
-                alt="logo de carrito de compras"
-                class="imgNav"
-            /></a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="logo de MLS creaciones" class="w-70" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="productos.html"
+                  >Productos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="disenios_disponibles.html"
+                  >Diseños Disponibles</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="sobre_mi.html"
+                  >Sobre Mí</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="faqs_contacto.html"
+                  >FAQs & Contacto</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/user.png"
+                    alt="logo de inicio de sesión de usuario"
+                    class="imgNav"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/cart.png"
+                    alt="logo de carrito de compras"
+                    class="imgNav"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
+
       <main class="text-center" id="productos">
         <h1>Bienvenid@s a MLS Creaciones!</h1>
-        <div id="portadaPage">
+        <div
+          id="carouselExampleSlidesOnly"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/index1.png" class="d-block w-40" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/index2.png" class="d-block w-40" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/index4.png" class="d-block w-40" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/index3.png" class="d-block w-40" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/index5.png" class="d-block w-40" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/index6.png" class="d-block w-40" alt="..." />
+            </div>
+          </div>
         </div>
       </main>
       <footer class="footer" id="footer">
@@ -71,7 +136,7 @@
           />
         </div>
         <div>
-          <h3>Redes Sociales</h3>
+          <h3>Seguime en Redes</h3>
           <a
             href="https://es-la.facebook.com/pages/category/Interest/MLS-creaciones-1663628870628480/"
             target="_blank"
@@ -96,5 +161,7 @@
       </footer>
     </div>
     <!-- fin del contenedor-->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
