--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body>
@@ -16,40 +18,82 @@
       <header class="encabezado__box" id="header">
         Envío GRATIS con compras mayores a $3.000!
       </header>
-      <nav class="botonera" id="nav1">
-        <a href="index.html">
-          <img
-            src="img/logo.png"
-            alt="logo de MLS creaciones"
-            class="encabezado__logoMarca"
-          />
-        </a>
-        <ul>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="disenios_disponibles.html">Diseños Disponibles</a></li>
-          <li><a href="sobre_mi.html">Sobre Mí</a></li>
-          <li><a href="faqs_contacto.html">FAQs & Contacto</a></li>
-          <li>
-            <a href="#"
-              ><img
-                src="img/user.png"
-                alt="logo de inicio de sesión de usuario"
-                class="imgNav"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="img/cart.png"
-                alt="logo de carrito de compras"
-                class="imgNav"
-            /></a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logo.png" alt="logo de MLS creaciones" class="w-70" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="productos.html"
+                  >Productos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="disenios_disponibles.html"
+                  >Diseños Disponibles</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="sobre_mi.html"
+                  >Sobre Mí</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="faqs_contacto.html"
+                  >FAQs & Contacto</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/user.png"
+                    alt="logo de inicio de sesión de usuario"
+                    class="imgNav"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="img/cart.png"
+                    alt="logo de carrito de compras"
+                    class="imgNav"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-      <main class="text-center animate__animated animate__fadeIn" id="productos">
-        <h1>Un poco más sobre mí</h1>
-        <article class="sobreMi__article">
+      <main
+        class="text-center animate__animated animate__fadeIn"
+        id="productos"
+      >
+        <article class="sobreMi__article" id="sobreMi">
+          <h1>Un poco más sobre mí</h1>
           <a href="">
             <img
               src="img/marian.png"
@@ -61,13 +105,10 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas in
             quas soluta, officia et doloribus? Qui minima impedit numquam beatae
             error quo eaque natus accusamus, provident nobis expedita architecto
-            officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Quasi culpa iure, delectus aliquid! Ut hic dolores, quae! Blanditiis
-            ipsum incidunt aliquid perspiciatis pariatur odio. Asperiores
-            veritatis adipisci provident magni earum! Lorem, ipsum dolor sit
-            amet consectetur adipisicing elit. Laudantium dolores dicta, ex illo
-            beatae eligendi, quae, ut reprehenderit aut iusto sint aperiam fugit
-            labore aliquam et nostrum adipisci veniam, sapiente?
+            officiis. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Laudantium dolores dicta, ex illo beatae eligendi, quae, ut
+            reprehenderit aut iusto sint aperiam fugit labore aliquam et nostrum
+            adipisci veniam, sapiente?
           </p>
         </article>
       </main>
@@ -114,5 +155,7 @@
       </footer>
     </div>
     <!-- fin del contenedor-->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
