subida de Desafío Entregable 6

--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link
       rel="stylesheet"
@@ -141,7 +141,7 @@
             class="bg-light p-2 container-fluid animate__animated animate__fadeInRight"
           >
             <div class="row">
-              <article class="col-lg-8 p-5" id="formularioContacto">
+              <article class="col-lg-6 p-5" id="formularioContacto">
                 <h2>Contacto</h2>
                 <form>
                   <div class="form-group row">
@@ -225,7 +225,7 @@
                 </form>
               </article>
               <!-- ends form-->
-              <article class="col-lg-4 imgContacto">
+              <article class="col-lg-6">
                 <img
                   src="img/marian.png"
                   alt="foto de mariana"
