--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link
       rel="stylesheet"
@@ -112,7 +112,8 @@
         <!-- inician productos -->
         <section class="py-3 animate__animated animate__fadeIn">
           <div class="container-fluid">
-            <h1 class="text-center">Cartucheras<a href="disenios_disponibles.html">(Estampado a Elección)</a></h1>
+            <h1 class="text-center">Cartucheras <a href="estampados_disponibles.html">(Estampado a Elección)</a>
+            </h1>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
