--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Productos</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo de MLS creaciones" class="w-70" />
+            <img src="img/logo.png" alt="logo de MLS creaciones"/>
           </a>
           <button
             class="navbar-toggler"
