Subida de Desafío Entregable 7

--- a/disenios_disponibles.html
+++ b/disenios_disponibles.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos</title>
+    <title>Diseños Disponibles de Estampados</title>
+    <meta
+      name="description"
+      content="Te invito a conocer los diseños disponibles de mis estampados para telas. 100% originales"
+    />
+    <meta
+      name="keywords"
+      content="cartucheras, agendas, bolsitos, artesanales, estampados originales, diseños a elección, compra online, tarjetas de crédito, cuotas, envíos"
+    />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -94,11 +102,11 @@
       >
         <section class="galeria_disenios">
           <div>
-            <h3>
+            <h1>
               Te ofrezco una gran variedad de diseños exclusivos que voy
               actualizando constantemente! Para más información, suscribite a mi
               <a href="faqs_contacto.html">Newsletter</a>
-            </h3>
+            </h1>
           </div>
           <figure>
             <figcaption class="estampados__titulo">Gatitos</figcaption>
