--- a/faqs_contacto.html
+++ b/faqs_contacto.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos</title>
+    <title>Preguntas Frecuentes y Contacto</title>
+    <meta
+      name="description"
+      content="Te cuento todo lo que tenés que saber sobre cómo adquirir mis productos, métodos de pago y envío. ¿Te quedaron dudas o tenés sugerencias para hacerme? Te dejo un formulario para que te contactes conmigo. Te invito a suscribirte a mi Newsletter para recibir información sobre novedades y promociones"
+    />
+    <meta
+      name="keywords"
+      content="cartucheras, agendas, bolsitos, artesanales, estampados originales, diseños a elección, compra online, tarjetas de crédito, cuotas, envíos"
+    />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -95,7 +103,6 @@
           <div class="container-fluid">
             <div class="row">
               <h2>Preguntas Frecuentes</h2>
-
               <!-- inicia card 1 -->
               <article class="col-md-6 col-lg-6">
                 <div class="card">
@@ -105,7 +112,7 @@
                     alt="..."
                   />
                   <div class="card-body">
-                    <h5 class="card-title">Modalidades de Pago</h5>
+                    <h4 class="card-title">Cómo Comprar</h4>
                     <p class="card-text">
                       Some quick example text to build on the card title and
                       make up the bulk of the card's content.
@@ -123,7 +130,7 @@
                     alt="..."
                   />
                   <div class="card-body">
-                    <h5 class="card-title">Modalidades de Envío</h5>
+                    <h4 class="card-title">Modalidades Pago y Envío</h4>
                     <p class="card-text">
                       Some quick example text to build on the card title and
                       make up the bulk of the card's content.
@@ -141,7 +148,7 @@
             class="bg-light p-2 container-fluid animate__animated animate__fadeInRight"
           >
             <div class="row">
-              <article class="col-lg-6 p-5" id="formularioContacto">
+              <article class="col-lg-6 p-1" id="formularioContacto">
                 <h2>Contacto</h2>
                 <form>
                   <div class="form-group row">
@@ -206,7 +213,7 @@
                           name="comentario"
                           id="comentario"
                           cols="50"
-                          rows="5"
+                          rows="3"
                           placeholder="Escribí acá tus comentarios adicionales"
                         ></textarea>
                       </div>
@@ -214,12 +221,8 @@
                   </fieldset>
                   <div class="form-group row">
                     <div class="col-sm-10">
-                      <button type="submit" class="btn btn-primary">
-                        Enviar
-                      </button>
-                      <button type="reset" class="btn btn-primary">
-                        Cancelar
-                      </button>
+                      <button type="submit" class="btn-submit">Enviar</button>
+                      <button type="reset" class="btn-reset">Cancelar</button>
                     </div>
                   </div>
                 </form>
