--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos</title>
+    <title>
+      MLS Creaciones - Cartucheras, agendas, bolsitos artesanales y mucho más!
+      Vos elegís el estampado. Envíos a todo el país
+    </title>
+    <meta
+      name="description"
+      content="¡Bienvenidos a MLS Creaciones! Un emprendimiento personal donde elaboro accesorios con mucho amor, ideales para regalar y regalarse. Estampados 100% originales de temáticas variadas"
+    />
+    <meta
+      name="keywords"
+      content="cartucheras, agendas, bolsitos, artesanales, estampados originales, diseños a elección, compra online, tarjetas de crédito, cuotas, envíos"
+    />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -21,7 +32,7 @@
       <nav class="navbar navbar-expand-lg bg-nav" id="nav1">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" alt="logo de MLS creaciones"/>
+            <img src="img/logo.png" alt="logo de MLS creaciones" />
           </a>
           <button
             class="navbar-toggler"
