--- a/productos.html
+++ b/productos.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <title>Catálogo de Productos</title>
+    <meta name="description" content="Bienvenido a mi catálogo de productos. Modelos variados que se ajustan a tus necesidades. Artículos en tela tienen estampado 100% original a elección. ¡No te olvides de consultar los productos destacados del mes!">
+    <meta name="keywords" content="cartucheras, agendas, bolsitos, artesanales, estampados originales, diseños a elección, compra online, tarjetas de crédito, cuotas, envíos">    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link
@@ -112,8 +113,8 @@
         <!-- inician productos -->
         <section class="py-3 animate__animated animate__fadeIn">
           <div class="container-fluid">
-            <h1 class="text-center">Cartucheras <a href="estampados_disponibles.html">(Estampado a Elección)</a>
-            </h1>
+            <h2 class="text-center">Cartucheras <a href="estampados_disponibles.html">(Estampado a Elección)</a>
+            </h2>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -123,10 +124,10 @@
                     alt="imagen de cartuchera modelo pocket"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Cartu Pocket</h2>
+                    <h3 class="card-title">Cartu Pocket</h3>
                     <p class="size">Medidas (largo-alto-ancho): (18 x 5 x 6) cm</p>
                     <p class="price">$350</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 1 -->
@@ -139,10 +140,10 @@
                   alt="imagen de cartuchera modelo peque"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Cartu Peque</h2>
+                    <h3 class="card-title">Cartu Peque</h3>
                     <p class="size">Medidas (largo-alto-ancho): (18 x 7 x 8) cm</p>
                     <p class="price">$550</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 2 -->
@@ -155,10 +156,10 @@
                   alt="imagen de cartuchera modelo neceser"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Cartu Neceser</h2>
+                    <h3 class="card-title">Cartu Neceser</h3>
                     <p class="size">Medidas (largo-alto-ancho): (20 x 10 x 8) cm</p>
                     <p class="price">$700</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 3 -->
@@ -171,10 +172,10 @@
                   alt="imagen de cartuchera neceser XL"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Cartu Neceser XL</h2>
+                    <h3 class="card-title">Cartu Neceser XL</h3>
                     <p class="size">Medidas (largo-alto-ancho): (23 x 19 x 12) cm</p>
                     <p class="price">$900</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 4 -->
@@ -186,7 +187,7 @@
 
         <section class="py-3 animate__animated animate__fadeIn">
           <div class="container-fluid">
-            <h1 class="text-center">Agendas 2022</h1>
+            <h2 class="text-center">Agendas 2022</h2>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -196,9 +197,9 @@
                   alt="imagen de agenda modelo travel"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Modelo Travel</h2>
+                    <h3 class="card-title">Modelo Travel</h3>
                     <p class="price">$500</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 1 -->
@@ -211,9 +212,9 @@
                     alt="imagen de agenda modelo zoo"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Modelo Zoo</h2>
+                    <h3 class="card-title">Modelo Zoo</h3>
                     <p class="price">$550</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 2 -->
@@ -226,9 +227,9 @@
                     alt="imagen de agenda modelo bullet"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Modelo Bullet</h2>
+                    <h3 class="card-title">Modelo Bullet</h3>
                     <p class="price">$650</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 3 -->
@@ -241,9 +242,9 @@
                     alt="imagen de agenda modelo dinos"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Modelo Dinos</h2>
+                    <h3 class="card-title">Modelo Dinos</h3>
                     <p class="price">$650</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                 </div>
               </article>
               <!-- ends box 4 -->
@@ -255,7 +256,7 @@
 
         <section class="py-3 animate__animated animate__fadeIn">
           <div class="container-fluid">
-            <h1 class="text-center">Combos Especiales (Edición Limitada!)<a href="disenios_disponibles.html">(Estampado a Elección)</a></h1>
+            <h2 class="text-center">Combos Especiales (Edición Limitada!)<a href="disenios_disponibles.html">(Estampado a Elección)</a></h2>
             <div class="row">
               <article class="col-md-6 col-lg-3 pb-3 text-center">
                 <div class="card">
@@ -265,10 +266,10 @@
                     alt="imagen de combo bolso a4 y cartu modelo neceser"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Combo Perritos</h2>
+                    <h3 class="card-title">Combo Perritos</h3>
                     <p class="details">Incluye Bolso A4 y Cartu Modelo "Neceser"</p>
                     <p class="price">$950</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                   </div>
               </div>
               </article>
@@ -282,10 +283,10 @@
                     alt="imagen de combo que incluye bolso matero, porta mate y yerbero"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Combo Matero</h2>
+                    <h3 class="card-title">Combo Matero</h3>
                     <p class="details">Incluye Bolso Matero, Porta Mate y Yerbero</p>
                     <p class="price">$1000</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                   </div>
               </div>
               </article>
@@ -299,12 +300,12 @@
                     alt="imagen de combo de 2 libretas tamaño a6"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Combo Libretas</h2>
+                    <h3 class="card-title">Combo Libretas</h3>
                     <p class="size">
                     Incluye 2 libretas tamaño A6 -  (18 x 7 x 8) cm
                     </p>
                     <p class="price">$700</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                   </div>
               </div>
               </article>
@@ -318,11 +319,11 @@
                     alt="imagen de combo de cestito y jabón artesanal"
                   />
                   <div class="card-body">
-                    <h2 class="card-title">Combo Clean</h2>
+                    <h3 class="card-title">Combo Clean</h3>
                     <p class="size">
                     Incluye Cestito y Jabón Artesanal (Consultar Stock)</p>
                     <p class="price">$800</p>
-                    <a href="" class="btn btn-info w-100">Agregar Artículo</a>
+                    <a href="" class="btn w-100">Agregar Artículo</a>
                   </div>
               </div>
               </article>
