--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos</title>
+    <title>Sobre Mí</title>
+    <meta
+      name="description"
+      content="Te invito a conocer un poco más sobre mí y la historia de mi emprendimiento"
+    />
+    <meta
+      name="keywords"
+      content="cartucheras, agendas, bolsitos, artesanales, estampados originales, diseños a elección, compra online, tarjetas de crédito, cuotas, envíos"
+    />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -92,7 +101,7 @@
         class="text-center animate__animated animate__fadeIn"
         id="productos"
       >
-        <article class="sobreMi__article" id="sobreMi">
+        <article class="sobreMi__article">
           <h1>Un poco más sobre mí</h1>
           <a href="">
             <img
@@ -101,15 +110,13 @@
               class="sobreMi__article--fotoMarian"
             />
           </a>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas in
-            quas soluta, officia et doloribus? Qui minima impedit numquam beatae
-            error quo eaque natus accusamus, provident nobis expedita architecto
-            officiis. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Laudantium dolores dicta, ex illo beatae eligendi, quae, ut
-            reprehenderit aut iusto sint aperiam fugit labore aliquam et nostrum
-            adipisci veniam, sapiente?
-          </p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas in
+          quas soluta, officia et doloribus? Qui minima impedit numquam beatae
+          error quo eaque natus accusamus, provident nobis expedita architecto
+          officiis. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Laudantium dolores dicta, ex illo beatae eligendi, quae, ut
+          reprehenderit aut iusto sint aperiam fugit labore aliquam et nostrum
+          adipisci veniam, sapiente?
         </article>
       </main>
       <footer class="footer" id="footer">
