--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/index1.png" class="d-block w-40" alt="..." />
+              <img src="img/index1.png" class="d-block w-40" alt="imagen de cartu neceser y florero decorativo" />
             </div>
             <div class="carousel-item">
-              <img src="img/index2.png" class="d-block w-40" alt="..." />
+              <img src="img/index2.png" class="d-block w-40" alt="imagen de combo matero que incluye bolso, porta yerba y porta azúcar" />
             </div>
             <div class="carousel-item">
-              <img src="img/index4.png" class="d-block w-40" alt="..." />
+              <img src="img/index4.png" class="d-block w-40" alt="imagen de Mariana con bolsito sosteniendo lona con estampado floral y bolsito A4 de fondo" />
             </div>
             <div class="carousel-item">
-              <img src="img/index3.png" class="d-block w-40" alt="..." />
+              <img src="img/index3.png" class="d-block w-40" alt="imagen de tres cartucheras modelo sobre" />
             </div>
             <div class="carousel-item">
-              <img src="img/index5.png" class="d-block w-40" alt="..." />
+              <img src="img/index5.png" class="d-block w-40" alt="imagen de tres modelos de agendas" />
             </div>
             <div class="carousel-item">
-              <img src="img/index6.png" class="d-block w-40" alt="..." />
+              <img src="img/index6.png" class="d-block w-40" alt=".imagen de Mariana con máquina de coser />
             </div>
           </div>
         </div>
